# experts

./: .coverage  .env  .env.example  .gitignore  .loop_state.json  .pre-commit-config.yaml  .version_history.json  CLAUDE.md  CODE_WIKI.md  README.md  agent-card.json  batch2_results.json  bootstrap.py  coordination_config.yaml  data_source_adapter.py  debate_v31_report.html  fdt_api.py  fdt_cli.py  fdt_daily_runner.py  fdt_test_helpers.py  futures-debate-team-dependencies.md  futures-debate-team-user-manual.md  phase2_chain_output.json  pyproject.toml  readme.txt  requirements.txt  run_all_tests.py  temp_report_check.html
futures-debate-team/: .coverage  .coverage.DESKTOP-2TTEFK7.pid16608.Xx6J2Z5x.HFClUhxZLmTh  .coverage.DESKTOP-2TTEFK7.pid17192.XCfZBrvx.H01FyiY9Gqgh  .coverage.DESKTOP-2TTEFK7.pid4112.XOncsY8x.HNQIp837rWOh  .created-by-session  .gitignore  .version_history.json  FUTURE_ARCHITECTURE.md  README.md  USER_MANUAL.md  audit.py  bootstrap.py  broken_test.json  integration_test.py  phase2_chain_output.json  pyproject.toml  requirements.txt  run_all_tests.py  run_all_tests.py.bak_20260707_185347  settings.json  settings.json.example
futures-debate-team/.codebuddy-plugin/: plugin.json  plugin.json.bak.20260630  plugin.json.bak.20260705  plugin.json.bak2.20260630
futures-debate-team/.workbuddy/memory/: 2026-07-05.md  2026-07-06.md  2026-07-11.md  MEMORY.md  glue_code_audit_20260705.md
futures-debate-team/agents/: futures-affirmative-debater.md  futures-bear-researcher.md  futures-bull-researcher.md  futures-chain-analyst.md  futures-chain-analyst.md.bak.20260630  futures-chain-analyst.md.bak.20260705  futures-datatech.md  futures-debate-team-team-lead.md  futures-fundamental-researcher.md  futures-fundamental-researcher.md.bak.20260705  futures-judge-deputy.md  futures-judge.md  futures-judge.md.bak  futures-judge.md.bak2  futures-opposition-debater.md  futures-opposition-debater.md.bak.20260705  futures-quant-analyst.md  futures-risk-manager.md  futures-risk-manager.md.bak  futures-technical-researcher.md  futures-trading-strategist.md
futures-debate-team/agents.backup.2026-07-11/: futures-affirmative-debater.md  futures-judge-deputy.md  futures-risk-manager.md
futures-debate-team/agents/backups/: futures-fundamental-researcher.md.bak.20260705-v2  futures-judge.md.bak.20260705  futures-technical-researcher.md.bak.20260705
futures-debate-team/agents_backup/: 20260701_1655_futures-trend-analyst.md  futures-bear-researcher.md  futures-bull-researcher.md  futures-chain-analyst.md  futures-data-engineer.md  futures-debate-team-team-lead.md  futures-risk-manager.md  futures-trading-strategist.md  futures-trend-analyst.md
futures-debate-team/agents_backup/20260701_1405/: futures-bear-researcher.md  (+8 more)
futures-debate-team/benchmarks/: benchmark_baseline.json
futures-debate-team/config/: schema.py  team_config.json
futures-debate-team/contracts/: debate_argument_schema.py
futures-debate-team/data/: debate_results.json
futures-debate-team/debate/: __init__.py  chain_LH_20260707.json  debate_results_LH2609_20260707.json  history.py  judge_output_rb_20260706.json  p4_zhengzhen_LH.json  p4_zhensi_LH.json  p5_judge_LH.json  p5_risk_review_LH.json  p5_trading_plan_LH.json  research_LH_fundamental_20260707.json  research_LH_technical_20260707.json
futures-debate-team/deploy/: celery_config.py
futures-debate-team/docs/: Bridgewater方法论_CTA落地_完整实施手册.md  agent-protocol.md  audit-report-20260705.md  business_flow.md  comparison_report.md  compatibility-matrix.md  d1-d3-vibenche-design.md  distributed_evolution_plan.md  independence_roadmap.md  latency-optimization-v1.0.md  next-batch-design.md  omniopt-integration-guide.md  optimization-plan-v4.4.md  optimization-plan.md  overview.md  p3-implementation-plan.md  pathC-debate-prescreen-fix.md  pg-upgrade-plan.md  signal-quality-plan.md  technical-debt.md  three-implementation-paths.md  three_way_comparison_20260705.md
futures-debate-team/futures_data_core/: __init__.py  _llm_bridge.py  _runtime.py
futures-debate-team/memory/: agent_profiles.json  agent_watchdog.md  apm_scorecard.json  argument_patterns.md  calibration.json  changelog.md  data_sources.md  debate_journal.json  debate_weights.json  debater_profiles.md  execution_followup.json  execution_followup.json.bak_20260707_182605  execution_followup.json.bak_20260707_183911  execution_followup.json.bak_20260707_184114  failure_clusters.json  feedback_entries.json  incidents.md  judgment_revisions.md  run_issues_LH_rerun_20260707.md.bak_20260707  schedule_state.json  self_improve_log.json  session_rules.md  technical_debt.md  validation_stats.json
futures-debate-team/ml/: trainer.py
futures-debate-team/pipeline/: __init__.py  runner.py
futures-debate-team/rules/: futures-debate-team_rules.md
futures-debate-team/scheduler/: __init__.py  engine.py  tasks.py  triggers.py
futures-debate-team/scripts/: __init__.py  agent_waiter.py  analyze_trajectory.py  attribution_analyzer.py  auto_factor_mining.py  auto_publish.py  auto_train.py  calibrate_weights.py  compliance_agent.py  confidence_utils.py  coordinator.py  daemon_watchdog.py  debate_protocol_v2.py  embodiskill_reflect.py  enforce_discipline.py  evidence_scorer.py  evolve_agents.py  execution_agent.py  extract_knowledge.py  fdt_paths.py  fingerprint.py  health_server.py  inference_gate.py  market_game_agent.py  marl_trainer.py  memory_writer.py  model_registry.py  ops_monitor.py  portfolio_risk.py  precompute_cache.py  regime_classifier.py  run_debate.py  self_improve.py  signal_classifier.py  skillevolver_evolution.py  test_scripts.py  unified_logger.py  validate_agent_output.py  validate_verdicts.py  vector_memory.py  (+1 more)
futures-debate-team/scripts.backup.2026-07-11/: agent_waiter.py  apm_scorecard.py  auto_factor_mining.py  cluster_failures.py  debate_archiver.py  execution_agent.py  extract_knowledge.py  init_knowledge_base.py  record_verdicts.py  replay_harness.py  update_matrix.py  validate_verdicts.py
skills/quant-daily/: .gitignore  README.md  SKILL.md  USER_GUIDE.md  pyproject.toml  signal_summary.json
(+1628 files in other folders)
