[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "futures-debate-team"
version = "6.0.0"
description = "Multi-role futures trading debate system — 10 Agent CTA decision framework. v6.0: FDC data engine merge — QMT(0) primary source, TDX/TqSDK fallback, AKShare/EastMoney removed. v5.12: period discovery layer PERIOD_REGISTRY zero-hardcode. v5.11: debate pipeline engineering. v5.10: unified debate entry threshold."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Futures-Debate-Team Contributors"},
]

dependencies = [
    # ── 核心依赖 ──
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dateutil>=2.8",

    # ── AI / ML ──
    "lightgbm>=4.0",
    "scikit-learn>=1.3",

    # ── 数据获取 ──
    "tqdm>=4.65",

    # ── 风控 ──
    "scipy>=1.11",

    # ── 运维 ──
    "psutil>=5.9",
    "requests>=2.31",

    # ── 协议 ──
    "pydantic>=2.0",

    # ── 可选：分布式 ──
    # "celery>=5.3",
    # "redis>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "mypy>=1.5",
    "ruff>=0.1",
]
distributed = [
    "celery>=5.3",
    "redis>=4.5",
    "ray>=2.6",
]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
]
all = [
    "futures-debate-team[dev,distributed,ml]",
]

[tool.setuptools.packages.find]
include = ["contracts*", "scripts*", "deploy*", "futures_data_core*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = [
    "tests/quant-daily",
    "tests/commodity-chain",
    "tests/contracts",
    "tests/debate-argument-builder",
    "tests/debate-risk-manager",
    "tests/fdt-gate",
    "tests/fundamental-data-collector",
    "tests/self-improve-enhanced",
    "tests/technical-analysis",
]
python_files = ["test_*.py"]
addopts = "--cov=skills --cov=pipeline --cov=scheduler --cov=scripts --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
