[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "futures-debate-team"
version = "8.8.8"
description = "Multi-role futures trading debate system — 10 Agent CTA decision framework. v8.1.8: 去融合工程（G41 掌柜铁律）—— 不同策略哲学、甚至同策略内子信号均独立产出、独立送辩论层裁决；融合层已废弃。新增 reason 字段 + signal_passes_entry_gate 门禁 + 策略逻辑规则知识库（memory/knowledge/strategies/）。trend_following 10 子信号 + mean_reversion 3 子信号均已独立 emit。77 测试覆盖。v8.1.7: ..."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Futures-Debate-Team Contributors"},
]

dependencies = [
    # ── 核心依赖 ──
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dateutil>=2.8",

    # ── AI / ML ──
    "lightgbm>=4.0",
    "scikit-learn>=1.3",

    # ── 数据获取 ──
    "tqdm>=4.65",
    "httpx>=0.27",

    # ── 风控 ──
    "scipy>=1.11",

    # ── 运维 ──
    "psutil>=5.9",
    "requests>=2.31",

    # ── 协议 ──
    "pydantic>=2.0",

    # ── LangGraph ──
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=0.1.0",

    # ── PostgreSQL ──
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",

    # ── 可选：分布式 ──
    # "celery>=5.3",
    # "redis>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "mypy>=1.5",
    "ruff>=0.1",
]
distributed = [
    "celery>=5.3",
    "redis>=4.5",
    "ray>=2.6",
]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
]
all = [
    "futures-debate-team[dev,distributed,ml]",
]

[tool.setuptools.packages.find]
include = ["contracts*", "scripts*", "deploy*", "futures_data_core*", "fdt_langgraph*", "fdt_pg*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = [
    "skills/quant-daily/scripts",
]
testpaths = [
    "tests/quant-daily",
    "tests/commodity-chain",
    "tests/contracts",
    "tests/debate-argument-builder",
    "tests/debate-risk-manager",
    "tests/fdt-gate",
    "tests/fundamental-data-collector",
    "tests/self-improve-enhanced",
    "tests/technical-analysis",
    "tests/validators",
    "tests/strategies",
    "tests/fdt_langgraph",
]
python_files = ["test_*.py"]
addopts = "--cov=skills --cov=pipeline --cov=scheduler --cov=scripts --cov=fdt_langgraph --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
