[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "futures-debate-team"
version = "5.10.0"
description = "Multi-role futures trading debate system — 10 Agent CTA decision framework. v5.9: Harness Engineering maturity 4.7/5.0 — Pydantic config schema, trace_id贯穿, unified_logger JSON, pipeline集成测试(43用例), graceful drain, 合约版本迁移, 监控看板+健康端点. v5.6: harness engineering baseline + 4 P0 fixes. v5.5.1: structured argument schema (P0), differentiated info dispatch (P1), two-phase risk control (P2). v5.5: OmniOpt taxonomy. v5.4: APM-CS 5-axis + Telescope, ViBench + held-out judge. v5.3: channel breakout + TqSDK live mode. v5.10: 辩论入口阈值统一(DEBATE_ENTRY_MIN_ABS=20) + 移除120m监控/优化与盘前缓存"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Futures-Debate-Team Contributors"},
]

dependencies = [
    # ── 核心依赖 ──
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dateutil>=2.8",

    # ── AI / ML ──
    "lightgbm>=4.0",
    "scikit-learn>=1.3",

    # ── 数据获取 ──
    "akshare>=1.12",
    "tqdm>=4.65",

    # ── 风控 ──
    "scipy>=1.11",

    # ── 运维 ──
    "psutil>=5.9",
    "requests>=2.31",

    # ── 协议 ──
    "pydantic>=2.0",

    # ── 可选：分布式 ──
    # "celery>=5.3",
    # "redis>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "mypy>=1.5",
    "ruff>=0.1",
]
distributed = [
    "celery>=5.3",
    "redis>=4.5",
    "ray>=2.6",
]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
]
all = [
    "futures-debate-team[dev,distributed,ml]",
]

[tool.setuptools.packages.find]
include = ["contracts*", "scripts*", "deploy*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = [
    "tests/quant-daily",
    "tests/commodity-chain",
    "tests/contracts",
    "tests/debate-argument-builder",
    "tests/debate-risk-manager",
    "tests/fdt-gate",
    "tests/fundamental-data-collector",
    "tests/technical-analysis",
]
python_files = ["test_*.py"]
addopts = "--cov=skills --cov=pipeline --cov=scheduler --cov=scripts --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
