[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quant-daily"
version = "1.0.0"
description = "商品期货量化分析一体化 — 数据采集+指标计算+L1-L4趋势信号评分"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "quant-daily contributors"},
]

dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "pyyaml>=6.0",
    "duckdb>=0.8",
    "requests>=2.28",
]

[project.optional-dependencies]
tqsdk = ["tqsdk>=3.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
